<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_751007307601c988e581d7d546d820b"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/my1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="cursive"
        android:rotation="-21"
        android:rotationX="-4"
        android:rotationY="-4"
        android:text="@string/my1"
        android:textColor="@color/white"
        android:textColorHighlight="@color/design_default_color_error"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/EnterAge"
        app:layout_constraintEnd_toStartOf="@+id/history1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="229dp"
        android:fontFamily="cursive"
        android:rotationX="-12"
        android:text="@string/history1"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/numberText"
        app:layout_constraintEnd_toStartOf="@+id/app1"
        app:layout_constraintStart_toEndOf="@+id/my1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="62dp"
        android:fontFamily="cursive"
        android:rotation="21"
        android:text="@string/app1"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/numberText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/history1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EnterAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="cursive"
        android:text="@string/EnterAge"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/Generate"
        app:layout_constraintEnd_toStartOf="@+id/numberText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my1" />

    <EditText
        android:id="@+id/numberText"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/numberText"
        app:layout_constraintBottom_toTopOf="@+id/Generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EnterAge"
        app:layout_constraintTop_toBottomOf="@+id/app1"
        android:autofillHints="" />

    <Button
        android:id="@+id/Generate"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/coolbreeze"
        android:text="@string/Generate"
        android:textColor="#5D4037"
        app:layout_constraintBottom_toTopOf="@+id/editHistoryText"
        app:layout_constraintEnd_toStartOf="@+id/Clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberText" />

    <Button
        android:id="@+id/Clear"
        android:layout_width="96dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/coolbreeze"
        android:text="@string/Clear"
        android:textColor="#5D4037"
        app:layout_constraintBottom_toTopOf="@+id/editHistoryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Generate"
        app:layout_constraintTop_toBottomOf="@+id/numberText" />

    <TextView
        android:id="@+id/editHistoryText"
        android:layout_width="345dp"
        android:layout_height="232dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="33dp"
        android:background="@color/white"
        android:backgroundTint="@color/whitee"
        android:rotationX="8"
        android:textColor="#120F0F"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Generate" />

</androidx.constraintlayout.widget.ConstraintLayout>